# smart-mirror-app

./: .gitignore  README.md  docker-compose-backend.md  docker-compose.yml
backend-api/: Dockerfile  compose.yaml  pyproject.toml
backend-api/.docker/: docker-compose.yaml
backend-api/app/: main.py
backend-datagen/: Dockerfile  README.md  data_generator.py  pyproject.toml
frontend/: Dockerfile  package.json
frontend/pages/: notes.tsx
