[tool.poetry]
name = "backend-api"
version = "0.0.1"
description = "FastAPI implementation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend_api"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
